syntax = "proto3";
package featuregate;

service FeatureGate {
    rpc CreateFeature(Feature) returns (CreationResult);
    rpc CheckOpenness(FeatureName) returns (OpennessResult);
    rpc AddGuildFeature(FeatureAddition) returns (AddResult);
    rpc RemoveGuildFeature(FeatureRemoval) returns (RemoveResult);
    rpc CheckGuildFeature(GuildFeature) returns (FeatureResult);
    rpc GetFeatures(FeatureList) returns (stream Feature);
    rpc GetGuildFeatures(Guild) returns (stream Feature);
}

message Feature {
    string name = 1;
    bool open = 2;
}

message FeatureName {
    string name = 1;
}

message FeatureAddition {
    string feature_name = 1;
    fixed64 guild_id = 2;
}

message FeatureRemoval {
    string feature_name = 1;
    fixed64 guild_id = 2;
}

message GuildFeature {
    string feature_name = 1;
    fixed64 guild_id = 2;
}

message Guild {
    fixed64 guild_id = 1;
}

message FeatureList {
}

message CreationResult {
    bool success = 1;
}

message OpennessResult {
    bool open = 1;
}

message AddResult {
    bool success = 1;
}

message RemoveResult {
    bool success = 1;
}

message FeatureResult {
    bool has_feature = 1;
}
